Created resort lookbok page

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         
         <div>
           <ul >
-            <li><a href="#home">Home </a></li>
+            <li><a href="index.html">Home </a></li>
             <li><a href="#accomodation">Accomodation</a></li>
             <li><a href="#travelArrangements">Travel Arrangements</a></li>
-            <li><a href="#pictures">Pictures</a></li>
-            <li><a href="#Price">Contact Info</a></li>
+            <li><a href="pictures.html">Pictures</a></li>
+            <li><a href="#contact">Contact Info</a></li>
           </ul>
         </div>
       </div>
